test: fix tests  #712